--- a/manifest.json
+++ b/manifest.json
@@ -2,51 +2,91 @@
   "name": "SkyMonitor",
   "short_name": "SkyMonitor",
   "lang": "ru-RU",
-  "start_url": "../",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#FFFFFF",
   "background_color": "#FFFFFF",
+  "background": {
+    "scripts": ["jquery.js, render.js"]
+  },
+  "manifest_version": 2,
+  "version": "0.0.01",
 
   "icons": [
     {
-      "src":"\/images/icons/ms-icon-512x512.png",
+      "src": "/images/icons/ms-icon-512x512.png",
       "sizes": "512x512",
-      "type": "image\/png"
+      "type": "image/png"
     },
     {
-      "src": "\/images/icons/android-icon-36x36.png",
+      "src": "/images/icons/android-icon-36x36.png",
       "sizes": "36x36",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "0.75"
     },
     {
-      "src": "\/images/icons/android-icon-48x48.png",
+      "src": "/images/icons/android-icon-48x48.png",
       "sizes": "48x48",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "1.0"
     },
     {
-      "src": "\/images/icons/android-icon-72x72.png",
+      "src": "/images/icons/android-icon-72x72.png",
       "sizes": "72x72",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "1.5"
     },
     {
-      "src": "\/images/icons/android-icon-96x96.png",
+      "src": "/images/icons/android-icon-96x96.png",
       "sizes": "96x96",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "2.0"
     },
     {
-      "src": "\/lexpart-pwa/images/icons/android-icon-144x144.png",
+      "src": "/images/icons/android-icon-144x144.png",
       "sizes": "144x144",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "3.0"
     },
     {
-      "src": "\/images/icons/android-icon-192x192.png",
+      "src": "/images/icons/android-icon-192x192.png",
       "sizes": "192x192",
-      "type": "image\/png",
+      "type": "image/png",
+      "density": "4.0"
+    },{
+      "src": "/images/icons/apple-icon-36x36.png",
+      "sizes": "36x36",
+      "type": "image/png",
+      "density": "0.75"
+    },
+    {
+      "src": "/images/icons/apple-icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "density": "1.0"
+    },
+    {
+      "src": "/images/icons/apple-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "density": "1.5"
+    },
+    {
+      "src": "/images/icons/apple-icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "density": "2.0"
+    },
+    {
+      "src": "/images/icons/apple-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "density": "3.0"
+    },
+    {
+      "src": "/images/icons/apple-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
       "density": "4.0"
     }
   ]
