--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,7 @@
   "name": "SkyMonitor",
   "short_name": "SkyMonitor",
   "lang": "ru-RU",
-  "start_url": "https://rinjs.github.io/navi_pwa/",
-  "scope": "/",
+  "start_url": "/navi_pwa/index.html",
   "display": "standalone",
   "theme_color": "#FFFFFF",
   "background_color": "#FFFFFF",
@@ -15,7 +14,7 @@
 
   "icons": [
     {
-      "src": "images/icons/ms-icon-512x512.png",
+      "src": "images/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     },
